--- a/factgenie/templates/pages/no_datasets.html
+++ b/factgenie/templates/pages/no_datasets.html
@@ -20,7 +20,7 @@
 
     <div class="mt-5 w-75 mx-auto">
       <div class="alert alert-info text-center" role="alert">
-        No datasets are loaded. Go to the <a class="blue-link" href="{{ host_prefix }}/manage">
+        No datasets are loaded. Go to the <a class="blue-link" href="{{ host_prefix }}/manage#external">
           <b>data management</b></a> page and add your datasets first!
       </div>
     </div>
