Update message for adding model outputs

--- a/factgenie/templates/pages/manage.html
+++ b/factgenie/templates/pages/manage.html
@@ -255,7 +255,8 @@
             dataset</a>
         </div>
         <h5 class="mt-5">Add model outputs</h5>
-        <p>Here you can upload model outputs to factgenie. Learn more at <a
+        <p class="blue-link">Here you can upload model outputs to factgenie. Note that you need to add a dataset with
+          input data first. Learn more at <a
             href="https://github.com/ufal/factgenie/wiki/Data-Management#%EF%B8%8F-adding-model-outputs">factgenie
             wiki</a>.</p>
         <div class="mb-5">
