--- a/factgenie/templates/include/add_dataset_modal.html
+++ b/factgenie/templates/include/add_dataset_modal.html
@@ -29,7 +29,7 @@
                     <div id="tab-download-dataset" role="tabpanel" class="tab-pane p-3 active" tabindex="1">
                         <div class="alert alert-info blue-link" role="alert">
                             <p>You can download example datasets (optionally also along with model outputs and
-                                annotations)
+                                campaigns with annotations)
                                 from the list below.</p>
 
                             <p>After downloading the dataset, it will appear in the list of local datasets.</p>
@@ -50,7 +50,7 @@
                                     <th data-sortable="true" scope="col">Dataset</th>
                                     <th scope="col">Splits</th>
                                     <th scope="col">Outputs</th>
-                                    <th scope="col">Annotations</th>
+                                    <th scope="col">Campaigns</th>
                                     <th scope="col">Source</th>
                                     <th scope="col">Download</th>
                                     <th scope="col" data-visible="false">Description</th>
