--- a/factgenie/templates/pages/llm_campaign_new.html
+++ b/factgenie/templates/pages/llm_campaign_new.html
@@ -141,11 +141,12 @@
               <div class="row g-3 mb-3 align-items-center">
                 <div class="col-auto">
                   <i class="fa fa-code"></i>
-                  <span style="margin-left: 5px; margin-right: 10px;">API</span>
+                  <span style="margin-left: 5px; margin-right: 10px;">LLM evaluator</span>
                   <div class="mb-2">
-                    <small class="form-text text-muted">Select one of the available metric types (or add your own class
+                    <small class="form-text text-muted">Select one of the available LLM evaluators (or add your own
+                      class
                       to
-                      <code>factgenie/metrics.py</code>).
+                      <code>factgenie/models.py</code>).
                     </small>
                   </div>
                 </div>
