--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -99,7 +99,7 @@
                   required></textarea>
               </div>
               <!-- textarea for final message -->
-              <div class="form-group  mt-4">
+              <div class="form-group">
                 <label for="finalMessage">Final message</label>
                 <div class="mb-2">
                   <small class="form-text text-muted">The message shown after the annotator has submitted the
