Fix visibility of empty table with model outputs

--- a/factgenie/templates/pages/manage.html
+++ b/factgenie/templates/pages/manage.html
@@ -146,7 +146,7 @@
         {% endif %}
         <table id="model-out-table" data-toggle="table" data-search="false" data-pagination="true" data-page-size="10"
           data-detail-view-icon="false" data-pagination-parts="['pageList']" data-classes="table table-hover" {% if not
-          datasets %} style="display: none;" {% endif %}>
+          model_outputs %} style="display: none;" {% endif %}>
           <thead>
             <tr>
               <th scope="col" data-sortable="true">Dataset</th>
