--- a/factgenie/templates/pages/navbar.html
+++ b/factgenie/templates/pages/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-annotate justify-content-center">
     <a class="navbar-brand" href="{{ host_prefix }}/">
-        <img src="{{ host_prefix }}/static/img/genie.png" width="25px">
+        <img src="{{ host_prefix }}/static/img/genie.png" width="25px" style="margin-bottom: 0.25em;">
         <span style="margin-left: 5px; font-weight: bold;">factgenie</span>
     </a>
 </nav>
