--- a/factgenie/templates/pages/app_config.html
+++ b/factgenie/templates/pages/app_config.html
@@ -37,6 +37,17 @@
           </div>
         </div>
         <div class="form-group mt-3">
+          <label for="lock_view_pages">Include view pages in password protection</label>
+          <div class="mb-2">
+            <small class="form-text text-muted">If disable, the Browse and Analyze pages will not require login even
+              when login is active. Useful for publishing results collected with factgenie.</small>
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="lock_view_pages" name="lock_view_pages" {% if
+              app_config.login.lock_view_pages %} checked {% endif %}>
+          </div>
+        </div>
+        <div class="form-group mt-3">
           <label for="login_username">Username</label>
           <div class="mb-2">
             <small class="form-text text-muted">The username for logging in the app.</small>
