--- a/factgenie/templates/pages/llm_campaign_new.html
+++ b/factgenie/templates/pages/llm_campaign_new.html
@@ -6,11 +6,13 @@
   <link rel="stylesheet" media="screen" href="{{ host_prefix }}/static/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{ host_prefix }}/static/css/custom.css">
   <link href="{{ host_prefix }}/static/css/font-awesome.css" rel="stylesheet">
+  <link href="{{ host_prefix }}/static/css/huebee.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="{{ host_prefix }}/static/img/favicon.ico">
   <meta name="viewport" content="width=1024">
   <script src="{{ host_prefix }}/static/js/lib/jquery.min.js"></script>
   <script src="{{ host_prefix }}/static/js/lib/popper.min.js"></script>
   <script src="{{ host_prefix }}/static/js/lib/bootstrap.min.js"></script>
+  <script src="{{ host_prefix }}/static/js/lib/huebee.min.js"></script>
 </head>
 
 <body>
