--- a/factgenie/templates/crowdsourcing/annotate_body.html
+++ b/factgenie/templates/crowdsourcing/annotate_body.html
@@ -57,7 +57,7 @@
             </div>
             <div id='output-content'>
               <div>
-                <div class="mt-3 mb-4" role="group" aria-label="Basic radio toggle button group">
+                <div class="mt-3 mb-4 d-flex flex-wrap gap-1 align-items-center" role="group" aria-label="Basic radio toggle button group">
                   {% for category in annotation_span_categories %}
                   <input type="radio" class="btn-check btn-outline-secondary btn-err-cat" name="btnradio"
                     id="btnradio{{ loop.index }}" autocomplete="off" {% if loop.first %}checked{% endif %}
