--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" type="text/css" href="{{ host_prefix }}/static/css/custom.css">
   <link href="{{ host_prefix }}/static/css/font-awesome.css" rel="stylesheet">
   <link rel="shortcut icon" href="{{ host_prefix }}/static/img/favicon.ico">
+  <link href="{{ host_prefix }}/static/css/huebee.min.css" rel="stylesheet">
   <meta name="viewport" content="width=1024">
   <script src="{{ host_prefix }}/static/js/lib/jquery.min.js"></script>
   <script src="{{ host_prefix }}/static/js/lib/popper.min.js"></script>
   <script src="{{ host_prefix }}/static/js/lib/bootstrap.min.js"></script>
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
   <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+  <script src="{{ host_prefix }}/static/js/lib/huebee.min.js"></script>
 </head>
 
 <body>
