--- a/factgenie/templates/crowdsourcing/annotate_footer.html
+++ b/factgenie/templates/crowdsourcing/annotate_footer.html
@@ -7,4 +7,5 @@
 </script>
 
 <script src="{{ host_prefix }}/static/js/utils.js"></script>
+<script src="{{ host_prefix }}/static/js/span-annotator.js"></script>
 <script src="{{ host_prefix }}/static/js/annotate.js"></script>
