--- a/factgenie/templates/include/example_annotation_modal.html
+++ b/factgenie/templates/include/example_annotation_modal.html
@@ -3,7 +3,7 @@
 <script src="{{ host_prefix }}/static/js/lib/backbone-relational.js"></script>
 <script src="{{ host_prefix }}/static/js/lib/backbone.marionette.min.js"></script>
 <script src="{{ host_prefix }}/static/js/lib/underscore.string.min.js"></script>
-<script src="{{ host_prefix }}/static/js/lib/ypet.js"></script>
+<script src="{{ host_prefix }}/static/js/span-annotator.js"></script>
 
 <div class="modal fade" id="exampleAnnotation" tabindex="-1" aria-labelledby="exampleAnnotationLabel"
     aria-hidden="true">
