--- a/factgenie/templates/pages/browse.html
+++ b/factgenie/templates/pages/browse.html
@@ -124,10 +124,10 @@
               <small class="text-muted">
                 <i class="fa fa-pencil"></i> Annotations (click to show)
               </small>
-              <div class="form-check form-switch">
+              <!-- <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="badgesSwitch">
                 <label class="form-check-label" style="margin-top: 2px;" for="badgesSwitch">Annotation badges</label>
-              </div>
+              </div> -->
             </div>
             <div class="d-inline-flex gap-1" id="annotations-select">
             </div>
@@ -193,4 +193,5 @@
 </script>
 
 <script src="{{ host_prefix }}/static/js/utils.js"></script>
+<script src="{{ host_prefix }}/static/js/span-annotator.js"></script>
 <script src="{{ host_prefix }}/static/js/browse.js"></script>
