Make overlapping annotations configurable

--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -149,6 +149,15 @@
                 </select>
               </div>
               <div class="form-group mt-4">
+                <label for="annotationOverlapAllowed">Allow overlapping annotations</label>
+                <div class="mb-2">
+                  <small class="form-text text-muted">Whether annotators can annotate the same part of the text multiple times</small>
+                </div>
+                <div class="form-check form-switch">
+                  <input type="checkbox" class="form-check-input" id="annotationOverlapAllowed" name="annotationOverlapAllowed">
+                </div>
+              </div>
+              <div class="form-group mt-4">
                 <!-- select for sort order -->
                 <label for="sortOrder">Output ordering</label>
                 <div class="mb-2">
