--- a/factgenie/templates/crowdsourcing/annotate_body.html
+++ b/factgenie/templates/crowdsourcing/annotate_body.html
@@ -70,7 +70,7 @@
                   <input type="radio" class="btn-check btn-outline-secondary btn-eraser" name="btnradio"
                     id="btnradioeraser" autocomplete="off" data-cat-idx="-1">
                   <label class="btn btn-err-cat-label ms-auto" for="btnradioeraser" style="background-color: #FFF; color: #000 !important;">
-                    Eraser mode
+                    Erase mode
                   </label>
                 </div>
               </div>
