Display resource size (hardcoded in the config for simplicity)

--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -696,6 +696,10 @@ a:hover {
     max-width: 700px;
 }
 
+.modal-xl {
+    max-width: 1000px !important;
+}
+
 #about-btn {
     padding: 5px;
     /* border-radius: 15px; */
