Use LiteLLM for all models

--- a/factgenie/templates/pages/llm_campaign_new.html
+++ b/factgenie/templates/pages/llm_campaign_new.html
@@ -164,10 +164,10 @@
               <div class="row g-3 mb-3 align-items-center">
                 <div class="col-auto">
                   <i class="fa fa-link"></i>
-                  <span style=" margin-left: 10px; margin-right: 10px;">API URL</span>
+                  <span style=" margin-left: 10px; margin-right: 10px;">Local API URL (base)</span>
                   <div class="mb-2">
-                    <small class="form-text text-muted">For Ollama API, this is the API URL, e.g.
-                      <code>http://my-server.com:11434/api/</code>. The parameter is ignored for OpenAI API.
+                    <small class="form-text text-muted">For local services, this is the API URL, e.g.
+                      <code>http://my-server.com:11434</code>. The parameter is ignored for external APIs.
                     </small>
                   </div>
 
