Uncollapse example-level inputs

--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -184,12 +184,12 @@
               <div class="accordion  mt-3" id="advancedAccordion">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingAdvanced">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseAdvanced" aria-expanded="false" aria-controls="collapseAdvanced">
                       Example-level inputs
                     </button>
                   </h2>
-                  <div id="collapseAdvanced" class="accordion-collapse collapse" aria-labelledby="headingAdvanced"
+                  <div id="collapseAdvanced" class="accordion-collapse collapse show" aria-labelledby="headingAdvanced"
                     data-bs-parent="#advancedAccordion">
                     <div class="accordion-body">
                       <div class="row mb-3 align-items-center">
