Sort annotator ids in browse view

--- a/factgenie/templates/pages/browse.html
+++ b/factgenie/templates/pages/browse.html
@@ -122,7 +122,7 @@
           <div id='setuparea' style="display: none">
             <div class="mb-1 d-flex align-items-center justify-content-between">
               <small class="text-muted">
-                <i class="fa fa-pencil"></i> Annotations (click to show)
+                <i class="fa fa-pencil"></i> Annotations
               </small>
               <!-- <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="badgesSwitch">
