--- a/factgenie/templates/pages/analyze.html
+++ b/factgenie/templates/pages/analyze.html
@@ -95,10 +95,6 @@
           </p>
         </div>
 
-        <p class="mt-3">
-          <small class="text-muted">Select <b>at least two campaigns</b> for comparison.</small>
-        </p>
-
         <div id="data-select-area" class="row">
           <div class="col-md-6">
             <div class="card">
@@ -150,7 +146,8 @@
                   <th scope="col">Dataset</th>
                   <th scope="col">Split</th>
                   <th scope="col">Outputs</th>
-                  <th scope="col">Examples with multiple annotators</th>
+                  <th scope="col">Example count</th>
+                  <th scope="col">Groups for comparison (at least 2 needed)</th>
                 </tr>
               <tbody id="selectedDatasetsContent">
                 <!-- Selected combinations will be dynamically inserted here -->
